# Humai-Certifica-AI

./: .gitignore  Borrador2.md  Proyecto.md  app.py  app_old.py  articulo.md  borrador.md  estudiosexplora.md  main.py  readme.md  requirements.txt  setup.py
Docu/: Borrador2.md  Proyecto.md  articulo.md  articulo2.md  avances.md  meeting.md
Docu/LateX/: article.aux  article.fdb_latexmk  article.fls  article.out  article.tex
Docu/old/: articulo2.md  chatgpt.md
app/: .gitignore  __init__.py  constants.py  home.py
app/util/: __init.py  body_part_angle.py  integrado.py
data/: flex_gb  flexiones_cb.pkl  manos.csv  push_ups.pkl  pushup.csv
notebooks/: demo.ipynb  flex.pkl  flexiones_cb.pkl  flexiones_gb.pkl  flexiones_rf.pkl  mvp-Engine.ipynb  mvp-eng-metrics.ipynb  mvp-eng-pipeline.ipynb  mvp-eng-regular.ipynb  mvp-eng-select-feat.ipynb  mvp-labels-reload.ipynb  mvp-labels.ipynb  nuevo.ipynb  push-up-reload-3.csv
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
pnn_mvp/: __init__.py  readme.md  utils.py
test/: 1_captura.py  2_procesa.py  Body_Language_Decoder_Tutorial.ipynb  Media_Pipe_Holistic_Tutorial.ipynb  Media_Pipe_Pose_Tutorial.ipynb  baseline.ipynb  baseline1.ipynb  baseline2.ipynb  cabeza.csv  cabeza.pkl  coords1.csv  deadlift.pkl  flexiones_1.csv  push_ups_1.csv  push_ups_2.csv  repos-test.md  requeriments.txt  squat.pkl  squat_1.csv  squat_2.csv  temp.txt
test/.ipynb_checkpoints/: inicio-checkpoint.ipynb  (+1 more)
test/exploraciones/mrpose-2/: pyproject.toml
test/exploraciones/mrpose-2/mrpose_2/utils/: drawing_utils.py
(+20 files in other folders)
