[tool.poetry]
name = "mrpose-2"
version = "0.1.0"
description = ""
authors = ["hcgalvan <hcgalvan@gmail.com>"]
readme = "README.md"
packages = [{include = "mrpose_2"}]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "1.1"
mediapipe = "0.8.10.1"
numpy = "^1.24.2"
opencv-python = "^4.7.0.68"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
